# AviUtl2-style-config-editor

./: .gitignore  .lintstagedrc.js  LICENSE  README.md  commitlint.config.cjs  commitlint.config.js  index.html  next.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.config.ts
.github/workflows/: release.yaml
.husky/: commit-msg  pre-commit
aviutl2-style-config-editor-winui/: Cargo.toml  README.md
aviutl2-style-config-editor-winui/src/: app.xaml  main.rs  main_window.rs  main_window.xaml
aviutl2-style-config-editor-winui/src/components/: language_switcher.rs  language_switcher.xaml  settings_card.rs  settings_card.xaml
aviutl2-style-config-editor-winui/src/i18n/: en.resw  ja.resw
src/: App.tsx  index.ts  preload.ts  render.tsx
src-tauri/: Cargo.toml  style.default.conf  tauri.conf.json
src-tauri/src/: main.rs
src/app/: globals.css  layout.tsx  page.tsx
src/app/components/: LanguageSwitcher.tsx  RadixThemeProvider.tsx  SettingsCard.tsx  ThemeSwitcher.tsx
src/app/constants/: ItemsDef.ts
src/app/contexts/: LanguageContext.tsx
src/app/i18n/: translations.ts
src/components/: SettingsCard.tsx
src/components/ui/: button.tsx  dropdown-menu.tsx
src/handler/: ConfFileHandler.ts
