[package]
name = "aviutl2_style_config_editor_winui"
version = "0.1.0"
edition = "2021"

[dependencies]
windows = { version = "0.56", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_System_Threading", "Win32_UI_Controls", "Win32_Globalization"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"