[package]
name = "aviutl2-style-config-editor"
version = "1.1.0"
description = "AviUtl2 style.conf Editor"
authors = ["Yu-yu0202"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.5.5", features = [] }

[dependencies]
tauri = { version = "2.11", features = [] }
tauri-plugin-dialog = "2.6.0"
tauri-plugin-fs = "2.4.5"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
